# faust-kafka-learning

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
faust_learning/: main.py
faust_learning/config/: __init__.py  base.py
scripts/: entrypoint.sh
